--- a/QQMusic/QQMusic/Base.lproj/Main.storyboard
+++ b/QQMusic/QQMusic/Base.lproj/Main.storyboard
@@ -110,6 +110,9 @@
                                         </constraints>
                                         <state key="normal" image="player_btn_pre_normal"/>
                                         <state key="highlighted" image="player_btn_next_highlight"/>
+                                        <connections>
+                                            <action selector="preMusic:" destination="Fgt-zj-oDs" eventType="touchUpInside" id="CRo-bs-orB"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qz5-kq-u0v">
                                         <rect key="frame" x="275" y="58" width="60" height="60"/>
@@ -119,6 +122,9 @@
                                         </constraints>
                                         <state key="normal" image="player_btn_next_normal"/>
                                         <state key="highlighted" image="player_btn_play_highlight"/>
+                                        <connections>
+                                            <action selector="nextMusic:" destination="Fgt-zj-oDs" eventType="touchUpInside" id="dYg-le-sls"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rVC-ts-msC">
                                         <rect key="frame" x="147.5" y="38" width="80" height="80"/>
@@ -127,7 +133,11 @@
                                             <constraint firstAttribute="height" constant="80" id="rJf-qD-KVO"/>
                                         </constraints>
                                         <state key="normal" image="player_btn_play_normal"/>
+                                        <state key="selected" image="player_btn_pause_normal"/>
                                         <state key="highlighted" image="player_btn_pause_highlight"/>
+                                        <connections>
+                                            <action selector="playOrPause:" destination="Fgt-zj-oDs" eventType="touchUpInside" id="uNu-aw-oYI"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -198,6 +208,9 @@
                                             <constraint firstAttribute="height" constant="40" id="kZ9-z2-JbJ"/>
                                         </constraints>
                                         <state key="normal" title="Button" image="miniplayer_btn_playlist_close"/>
+                                        <connections>
+                                            <action selector="close:" destination="Fgt-zj-oDs" eventType="touchUpInside" id="4bb-Qi-HGZ"/>
+                                        </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="万里之外" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QNN-S2-1fA">
                                         <rect key="frame" x="147" y="20" width="82" height="24"/>
@@ -251,10 +264,15 @@
                     <nil key="simulatedTopBarMetrics"/>
                     <connections>
                         <outlet property="backgroundImageView" destination="5kh-qy-hqU" id="JxG-Ao-zgW"/>
+                        <outlet property="currentTimeLabel" destination="mHe-Co-l6a" id="opJ-fx-TJN"/>
                         <outlet property="foreImageView" destination="bLw-oV-ZFH" id="uPi-gG-ocD"/>
                         <outlet property="lrcBackView" destination="8uP-8B-kBB" id="QF1-8f-B5z"/>
                         <outlet property="lrcLabel" destination="Kme-ye-89p" id="PK3-eN-Jop"/>
+                        <outlet property="playOrPuaseBtn" destination="rVC-ts-msC" id="19S-ci-hd8"/>
                         <outlet property="progressSlider" destination="mfC-Ct-LMT" id="GEZ-hD-3ea"/>
+                        <outlet property="singerNameLabel" destination="PGC-Ov-aUA" id="heK-4F-PHC"/>
+                        <outlet property="songNameLabel" destination="QNN-S2-1fA" id="VD1-IV-Ux8"/>
+                        <outlet property="totalTimeLabel" destination="Tdl-NE-dOA" id="Pbt-PO-56u"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Zsm-dD-bEv" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -269,6 +287,7 @@
         <image name="player_btn_next_highlight" width="64" height="64"/>
         <image name="player_btn_next_normal" width="64" height="64"/>
         <image name="player_btn_pause_highlight" width="64" height="64"/>
+        <image name="player_btn_pause_normal" width="64" height="64"/>
         <image name="player_btn_play_highlight" width="64" height="64"/>
         <image name="player_btn_play_normal" width="64" height="64"/>
         <image name="player_btn_pre_normal" width="64" height="64"/>
